Series info to be added. Considering adding [More] button for info

--- a/comedy.html
+++ b/comedy.html
@@ -40,27 +40,41 @@
     <img onclick="myFunction1()" class="op" src="images/one-piece.png" alt="Cover of the One Piece series">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">One Piece</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="opm" src="images/opm.jpg" alt="Cover of the One Punch Man">
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">One Punch Man</h1>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="knsb" src="images/konosuba.jpg" alt="Cover of the Konosuba: God's Blessing on this Wonderful World series.">
     <div id="myInfo3" class="infoHide3">
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <h1 class="sr">Konosuba: God's Blessing on this Wonderful World</h1>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="kthr" src="images/katekyohr.jpg" alt="Cover of the Katekyo Hitman Reborn! series">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Ketekyo Hitman Reborn!</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     </section>
