--- a/drama.html
+++ b/drama.html
@@ -40,28 +40,40 @@
     <img onclick="myFunction1()" class="ascl" src="images/assassinationcr.jpg" alt="Cover of the Assasination Classroom series.">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Assassination Classroom</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="crote" src="images/classroom-ote.jpg" alt="Cover of the Classroom of The Elite series.">
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Classroom of The Elite</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="vls" src="images/vinland-sg.jpg" alt="Cover of the Vinland Saga series.">
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Vinland Saga</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="tyr" src="images/tokyorvg.jpg" alt="Cover of the Tokyo Revengers series.">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Tokyo Revengers</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     </section>
