--- a/f-ma.html
+++ b/f-ma.html
@@ -40,28 +40,40 @@
     <img onclick="myFunction1()" class="dbz" src="images/dragonballz.jpg" alt="Cover of the Dragon Ball Z series">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Dragon Ball Z</h1>
-    <p class="dbztxt">TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="ktmd" src="images/ktmd.jpg" alt="Cover of the Kenichi The Mightiest Disciple series">
     <div id="myInfo2" class="infoHide2">
     <H1 class="sr">Kenichi The Mightiest Disciple</H1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="ka" src="images/kengana.jpg" alt="Cover of the Kengan Ashura series">
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Kengan Ashura</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="bakitg" src="images/bakitg.jpg" alt="Cover of the Baki The Grappler series">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Baki The Grappler</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     </section>
