--- a/h-s.html
+++ b/h-s.html
@@ -40,28 +40,40 @@
     <img onclick="myFunction1()" class="csm" src="images/csm.jpg" alt="Cover of the Chainsaw Man series.">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Chainsaw Man</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="tyg" src="images/tyg.jpg" alt="Cover of the Tokyo Ghoul series.">
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Tokyo Ghoul</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="berserk" src="images/berserk.jpg" alt="Cover of the Berserk series.">
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Berserk</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="tpn" src="images/tpnl.jpg" alt="Cover of The Promised Neverland series.">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">The Promised Neverland</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     </section>
