--- a/music.html
+++ b/music.html
@@ -40,28 +40,40 @@
     <img onclick="myFunction1()" class="ylia" src="images/ylia.jpg" alt="Cover of the Your Lie in April series.">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Your Lie in April</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="beck" src="images/beck-mcs.jpg" alt="Cover of the Beck: Mongolian Chop Squad series.">
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Beck: Mongolian Chop Squad</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="so-euph" src="images/s-euph.jpg" alt="Cover of Sound Euphonium series.">
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Sound! Euphonium</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="bctr" src="images/bocchitr.jpg" alt="Cover of the Bocchi The Rock! series.">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Bocchi The Rock!</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </section>
   </main>
