--- a/sci-fif.html
+++ b/sci-fif.html
@@ -40,28 +40,40 @@
     <img onclick="myFunction1()" class="sao" src="images/sao.jpg" alt="Cover of the Sword Art Online series.">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Sword Art Online</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="cbpe" src="images/cyberpunke.jpg" alt="Cover of the Cyberpunk: Edgerunners series.">
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Cyberpunk: Edgerunners</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="ez" src="images/edz.jpg" alt="Cover of the Edens Zero series.">
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Edens Zero</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="gtm" src="images/gintama.jpg" alt="Cover of the Gintama series.">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Gintama</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     </section>
