--- a/b-a.html
+++ b/b-a.html
@@ -40,28 +40,40 @@
     <img onclick="myFunction1()" class="naruto" src="images/naruto.jpg" alt="Cover of the Naruto series">
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Naruto</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction2()" class="sds" src="images/sds.jpg" alt="Cover of the Seven Deadly Sins series">
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Seven Deadly Sins</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction3()" class="mha" src="images/mha.jpg" alt="Cover of the My Hero Academia series">
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">My Hero Academia</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     <article>
     <img onclick="myFunction4()" class="blkc" src="images/black-clover.jpg" alt="Cover of the Black Clover series">
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Black Clover</h1>
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <div></div>
+    <h4>Anime?</h4><p>Yes</p>
+    <br>
+    <h4>Summary:</h4><p>TEXT HERE</p>
     </div>
     </article>
     </section>
